--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CardProject</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+	<head>
+	  <title>CardProject</title>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	</head>
+	<body>
+	  <header class="navbar navbar-fixed-top navbar-inverse">
+		  <nav>
+		    <ul class="nav navbar-nav navbar-left">
+		      <% if logged_in? %>
+		        <li><%= link_to "Cards", cards_path %></li>
+		        <li><%= link_to 'Log out', logout_path, method: "delete"%></li>
+		      <% else %>
+		        <li><%= link_to "Sign up", signup_path %></li>
+		        <li><%= link_to 'Log in', login_path %></li>
+		        <li><%= link_to "Log in with Facebook", user_facebook_omniauth_authorize_path %></li>
+		      <% end %>
+		    </ul>
+		  </nav>
+	  </header>
+	  <%= yield %>
+	</body>
 </html>
