--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,17 +3,19 @@
     <%= form_for @user do |f| %>
       <%= f.label :firstname, "First Name: " %>
       <%= f.text_field :firstname, placeholder: 'First name', class:'form-control' %>
-
+      <br>
       <%= f.label :lastname, "Last Name: " %>
       <%= f.text_field :lastname, placeholder: 'Last name', class:'form-control' %>
-
+      <br>
       <%= f.label :email, "Email: " %>
       <%= f.email_field :email, placeholder: 'Email', class:'form-control' %>
-
+      <br>
       <%= f.label :password, "Password: " %>
       <%= f.password_field :password, placeholder: 'Password', class:'form-control' %>
-      <%= f.label :password_confirmation, "Password_confirmation: " %>
+      <br>
+      <%= f.label :password_confirmation, "Password confirmation: " %>
       <%= f.password_field :password_confirmation, placeholder: 'Confirm your password', class:'form-control' %>
+      <br>
       <%= f.submit "Save User", class:'btn btn-success' %>
     <% end %>
   </div>
