Search on all fields

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,11 +1,20 @@
 <% provide(:title, 'All cards') %>
 <%= link_to "",new_card_path, class: 'btn btn-success pull-left card-btn glyphicon glyphicon-plus' %>
+<div class='pull-right search'>
+	<%= form_for cards_path, method: :get do |f| %>
+	  <p>
+	    <%= text_field_tag :search, params[:search] %>
+	    <%= submit_tag "Go", name: nil %>
+	  </p>
+	<% end %>
+</div>
+<br>
 <div class="card_list">
   <% @cards.each do |card| %>
     <div class="card card-block">
-      <%= link_to '', card, class: "pull-right glyphicon glyphicon-remove", method: :delete %>
-	    <%= link_to '', edit_card_path(card.id), class: "pull-right glyphicon glyphicon-pencil" %>
-	    <%= image_tag card.card_photo.url(:thumb), class: "pull-left" %>
+      <span class="pull-right"><%= link_to 'Edit', controller: "cards", action: "edit", id: card.id %> : <%= link_to 'Delete', card_path(card.id), method: :delete %>
+	    </span>
+	      <%= image_tag card.card_photo, class: "pull-left" %>
 	    <br>
 	    <h4 class="card-title pull-right">First name: <%= card.firstname %> <br>Last name: <%= card.lastname %></h4>
 	    <% if card.fields.any? %>
