--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -17,11 +17,15 @@
   width: 300px;
   height: 200px;
   border: solid lightgrey;
+  img {
+    max-width: 100px;
+    max-height: 100px;
+  }
 }
 
 .card-title, .dynamic {
 	margin-right: 10px;
-	width: 150px;
+	width: 170px;
 }
 
 .card-btn {
@@ -30,4 +34,9 @@
 
 .card-remove-btn {
 	margin-top: 100px;
+}
+
+.search {
+  margin-top: 10px;
+  margin-right: 10px;
 }
